objects/Hodnotitel__c/Hodnotitel__c.object-meta.xml
<CustomObject>
    <description>Hodnotitel objektu/účasti.</description>
    <label>Hodnotitel</label>
    <nameField>
        <label>Jméno hodnotitele</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hodnotitelé</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>