objects/Hodnotitel__c/fields/Datum_posledniho_vyplaceni_odmen__c.field-meta.xml
<CustomField>
    <fullName>Datum_posledniho_vyplaceni_odmen__c</fullName>
    <label>Datum posledního vyplacení odměn</label>
    <type>Date</type>
</CustomField>