objects/Hodnotitel__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>E-mail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>