objects/Hodnotitel__c/fields/Provize_1_rok__c.field-meta.xml
<CustomField>
    <fullName>Provize_1_rok__c</fullName>
    <label>Provize - 1. rok</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>