objects/Hodnotitel__c/fields/Provize_dalsi_roky__c.field-meta.xml
<CustomField>
    <fullName>Provize_dalsi_roky__c</fullName>
    <label>Provize - další roky</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>