objects/Hodnotitel__c/fields/Telefon__c.field-meta.xml
<CustomField>
    <fullName>Telefon__c</fullName>
    <description>Telefon hodnotitele</description>
    <label>Telefon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>