objects/Hodnotitel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Telefon__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všichni hodnotitelé</label>
    <language>cs</language>
</ListView>